--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Ideaconcert</string>
+    <string name="app_name">MOON LIGHT</string>
     <string name="facebook_app_id">305223356904560</string>
     <string name="fb_login_protocol_scheme">fb305223356904560</string>
     <string name="identification">ID</string>
