User email verification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="password_confirm">password confirm</string>
     <string name="email">email</string>
     <string name="name">name</string>
+    <string name="submit">submit</string>
+    <string name="code">code</string>
+    <string name="verified">verified</string>
 </resources>
