--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="submit">submit</string>
     <string name="code">code</string>
     <string name="verified">verified</string>
+    <string name="timer_format">%02d:%02d</string>
 </resources>
