메인페이지 개발중. 커스텀 타이틀바 완성, 광고 배너 미완성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="code">code</string>
     <string name="verified">verified</string>
     <string name="timer_format">%02d:%02d</string>
+    <string name="title_search">작가/작품명 검색</string>
 </resources>
