--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,5 @@
     <string name="timer_format">%02d:%02d</string>
     <string name="title_search">작가/작품명 검색</string>
     <string name="title_activity_my_page">MyPageActivity</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="personal_information_agreement">수집된 개인정보(이메일 등)는 문의내용처리 및 고객불만의 해결을 위해 사용되며, 개인 정보수집 및 이용동의 거부 시, 1:1문의가 제한될 수 있습니다.</string>
 </resources>
