내 작품 관리 페이지 완성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Moonlight</string>
+    <string name="app_name">Moonright</string>
     <string name="facebook_app_id">258569524849881</string>
     <string name="fb_login_protocol_scheme">fb258569524849881</string>
     <string name="identification">ID</string>
