--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
 
     <string name="underlined_terms_and_condition"><u>약관 및 이용안내</u></string>
 
+    <string name="password_policy">비밀번호는 8자리 이상, 영문, 숫자 혼용입니다</string>
+    <string name="is_password_same">비밀번호 확인과 일치하지 않습니다</string>
+
 </resources>
