--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="password_policy">비밀번호는 8자리 이상, 영문, 숫자 혼용입니다</string>
     <string name="is_password_same">비밀번호 확인과 일치하지 않습니다</string>
 
+    <string name="input_comment">댓글을 입력해주세요 :)</string>
+    <string name="input_reply">님에게 답글을 입력해주세요 :)</string>
 </resources>
