캐시 보유량에 따른 작품 구매 및 보기 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
 
     <string name="input_comment">댓글을 입력해주세요 :)</string>
     <string name="input_reply">님에게 답글을 입력해주세요 :)</string>
+    <string name="contents_not_available">작품 구매 후 이용 가능합니다.</string>
 </resources>
